--- a/.env_example
+++ b/.env_example
@@ -1,6 +1,6 @@
-DB_USER=admin
-DB_PASSWORD=admin
-DB_IP=10.211.55.4
-DB_PORT=5432
+DB_USER=
+DB_PASSWORD=
+DB_IP=
+DB_PORT=
 DB_NAME=complaints
-JWT_SECRET_KEY=mydevjwtsecretkey123456
+JWT_SECRET_KEY=
